# ephios_material_checklists

./: pyproject.toml
ephios_material_checklists/: admin.py  apps.py  forms.py  signals.py  urls.py  views.py
ephios_material_checklists/locale/de/LC_MESSAGES/: django.po
ephios_material_checklists/migrations/: 0001_initial.py  0002_checklist_model.py  0003_alter_itemtype_category.py
ephios_material_checklists/models/: __init__.py  checklist.py  itemtype.py
ephios_material_checklists/templates/ephios_material_checklists/: base.html  checklist_confirm_delete.html  checklist_content.html  checklist_detail.html  checklist_edit_start.html  checklist_form.html  checklist_list.html  itemtype_list.html  itemtype_set_form.html  itemtypecategory_confirm_delete.html  itemtypecategory_form.html  itemtypecategory_list.html  start.html
ephios_material_checklists/templates/ephios_material_checklists/fragments/: checklist_header.html  checklist_tags.html  itemtype_list_columns.html
ephios_material_checklists/templatetags/: checklists_extras.py
ephios_material_checklists/tests/: __init__.py  test_checklist.py  test_itemtype.py
ephios_material_checklists/views/: __init__.py  checklist.py  itemtype.py
