[tool.poetry]
name = "ephios-material-checklists"
version = "0.1.0"
description = "Manage material and create checklists to keep track of it"
authors = ["Julian Baumann <julian@ephios.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."ephios.plugins"]
"ephios_material_checklists" = "ephios_material_checklists.apps.PluginApp"
